--- a/ประวัตินักศึกษา.html
+++ b/ประวัตินักศึกษา.html
@@ -14,7 +14,7 @@
     <h2>ทักษะความสามารถ</h2>
     <P>ร้องเพลงได้เเต่เพี้ยน</P>
     <P>เล่นเกมส์เก่งเเต่ไม่เคยชนะ</P>
-    <a href="หน้าหลัก.html">กลับหน้าหลัก</a>
+    <a href="index.html">กลับหน้าหลัก</a>
 </head>
 <body>
     
