--- a/ตารางในรูปแบบต่างๆ.html
+++ b/ตารางในรูปแบบต่างๆ.html
@@ -143,6 +143,6 @@
         </tr>
 
     </table>
-    <a href="หน้าหลัก.html">กลับหน้าหลัก</a>
+    <a href="index.html">กลับหน้าหลัก</a>
 </body>
 </html>
